# SeshatDatasetAnalysis

./: .gitignore  100_yr_dataset.xlsx  README.md  equinox_vars_mapping.csv  pyproject.toml  template.csv  test_dataset.xlsx
create_datasets/: create_PT_dataset.py  create_T_spaced_dataset.py
datasets/: .~lock.polity_capitals.xlsx#  100_yr_dataset.xlsx  100_yr_dataset_smooth_interp.xlsx  100y_dataset_imputed.xlsx  10_yr_dataset.xlsx  25_yr_dataset.xlsx  50_yr_dataset.xlsx  ALL_BATCHES_links_AllRegions_20250520_171230_withNames.csv  Equinox2020.05.2023_MSP.csv  MSP_template.csv  MSP_template_new.csv  PT_dataset_imputed.xlsx  PT_non_coded_variables.csv  Polaris2025.xlsx  Polaris2025_v2.xlsx  Polaris_data.xlsx  R_data_with_PCA.xlsx  SC_WF_MSP_template.csv  TSDat1.csv  TableData.Rdata  cliopatria_nga_locations.xlsx  comp_data.RData  crisisdb_power_transition_20250312_083844.csv  exchanges.csv  full_dataset.csv  polity_capitals.xlsx  power_transitions.json  power_transitions.xlsx  power_transitions_20241122_144511.csv  power_transitions_bootstrap.xlsx  power_transitions_nolim.xlsx  power_transitions_with_resid.xlsx  power_transitions_with_residuals.xlsx  pt_polaris_style.xlsx  pt_sc_cp_imputation_all_yr.xlsx  pt_sc_cp_imputation_before_1800.csv.xlsx  pt_sc_imputation_all_yr.xlsx  pt_sc_imputation_all_yr_only_nga.xlsx  pt_sc_imputation_before_1800.xlsx  raw.csv  (+8 more)
seshatdatasetanalysis/: Template.py  TimeSeriesDataset.py  __init__.py  mappings.py  plotting.py  utils.py
src/: Template.py  TimeSeriesDataset.py  __init__.py  mappings.py  utils.py
tests/: AGM.ipynb  debug_PT.csv  (+22 more)
(+6 files in other folders)
