[tool.poetry]
name = "SeshatDatasetAnalysis"
version = "0.1.0"
description = "A project for analyzing time series datasets."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
numpy = "^1.21.2"
scikit-learn = "^1.0.1"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"